; ModuleID = '/home/carl/AnghaBench/php-src/ext/standard/extr_filters.c_consumed_filter_create.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/standard/extr_filters.c_consumed_filter_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64, i32 }

@.str = private unnamed_addr constant [9 x i8] c"consumed\00", align 1
@consumed_filter_ops = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32*, i32)* @consumed_filter_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @consumed_filter_create(i8* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_4__*, align 8
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* null, i32** %8, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i64 @strcasecmp(i8* %10, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %28

14:                                               ; preds = %3
  %15 = load i32, i32* %7, align 4
  %16 = call %struct.TYPE_4__* @pecalloc(i32 1, i32 24, i32 %15)
  store %struct.TYPE_4__* %16, %struct.TYPE_4__** %9, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 2
  store i32 %17, i32* %19, align 8
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 1
  store i64 0, i64* %21, align 8
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  store i32 -1, i32* %23, align 8
  store i32* @consumed_filter_ops, i32** %8, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %26 = load i32, i32* %7, align 4
  %27 = call i32* @php_stream_filter_alloc(i32* %24, %struct.TYPE_4__* %25, i32 %26)
  store i32* %27, i32** %4, align 8
  br label %28

28:                                               ; preds = %14, %13
  %29 = load i32*, i32** %4, align 8
  ret i32* %29
}

declare dso_local i64 @strcasecmp(i8*, i8*) #1

declare dso_local %struct.TYPE_4__* @pecalloc(i32, i32, i32) #1

declare dso_local i32* @php_stream_filter_alloc(i32*, %struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
